Finsih workin on page version 2.0

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <h1 class="page-header__heading">Paweł Chyła</h1>
-        <p class="page-header__subheading">front end / webdeveloper</p>
+        <p class="page-header__subheading">front-end developer / webdeveloper</p>
         <ul class="page-header__social-list">
 
             <li class="page-header__social-item">
@@ -110,15 +110,16 @@
 
         <div class="about-me__text">
             <p class="about-me__text-lead">
-                Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec
-                tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
-                Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                Od okołu roku zajmuję się kodowanie stron www komercyjnie. Przez pierwszę sześć mięsięcy jako stażysta,
+                a od pół roku junior webdeveloper. Podczas dotychczasowej kariery od zera ucyzłem się zarówno
+                technologii
+                frontendowych jak i backendowych. Po odbycoiu stażu postanowiłem skupić się jedynie na technologiach
+                frontendowych, które cały czas rozwijam
             </p>
             <p>
-                Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit.
-                Sed ut imperdiet nisi. Proin condimentum
-                fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa
-                nisl quis neque.
+                Jestem osobą ambitną, dążącą do celu. Uwielbiam uczyć się nowych rzeczy i chciałbym stale doskonalić
+                swoje umiejętności w zespole bardziej doświadczonych ludzi. Lubie poznawać nowych ludzi a praca
+                zespołowa sprawa mi przyjemnąść. Jestem osobą kontaktową i bezkonfiktową.
             </p>
         </div>
 
@@ -128,15 +129,15 @@
             <div class="about-me__details">
                 <div class="about-me__detail-info">
                     <div class="about-me__info-item clearfix">
-                        <p class="about-me__info-heading">Birthday</p>
+                        <p class="about-me__info-heading">Data urodzenia</p>
                         <p class="about-me__info-text">: 12.05.2016</p>
                     </div>
                     <div class="about-me__info-item clearfix">
-                        <p class="about-me__info-heading">Phone</p>
+                        <p class="about-me__info-heading">Telefon</p>
                         <p class="about-me__info-text">: +61 9870 4563</p>
                     </div>
                     <div class="about-me__info-item clearfix">
-                        <p class="about-me__info-heading">Email</p>
+                        <p class="about-me__info-heading">E-mail</p>
                         <p class="about-me__info-text">: chyla1988@mail.com</p>
                     </div>
 
@@ -145,7 +146,7 @@
                 <p class="about-me__signature">Paweł Chyła</p>
 
                 <div class="about-me__btn-outer">
-                    <a href="test.txt" download="test.txt" class="btn"><span class="btn__icon fa fa-download"></span>
+                    <a href="cv.pdf" download="test.txt" class="btn"><span class="btn__icon fa fa-download"></span>
                         Pobierz CV</a>
                 </div>
             </div>
@@ -222,7 +223,7 @@
                 <div class="milestones__icon-container">
                     <span class="milestones__icon fa fa-briefcase"></span>
                 </div>
-                <p class="milestones__counter">5</p>
+                <p class="milestones__counter">7</p>
                 <p class="milestones__title">Projektów</p>
             </div>
 
@@ -230,7 +231,7 @@
                 <div class="milestones__icon-container">
                     <span class="milestones__icon fa fa-code"></span>
                 </div>
-                <p class="milestones__counter">2412</p>
+                <p class="milestones__counter">35621</p>
                 <p class="milestones__title">Lini kodu</p>
             </div>
 
@@ -239,7 +240,7 @@
                 <div class="milestones__icon-container">
                     <span class="milestones__icon fa fa-clock-o"></span>
                 </div>
-                <p class="milestones__counter">2412</p>
+                <p class="milestones__counter">2016</p>
                 <p class="milestones__title">Godzin w pracy</p>
             </div>
 
@@ -249,7 +250,7 @@
 </section>
 <section id="cv" class="resume">
     <div class="container">
-        <h1 class="main-heading resume__heading">curriculum vitae</h1>
+        <h1 class="main-heading resume__heading">Curriculum Vitae</h1>
 
         <article class="resume__experiences">
             <div class="resume__subheading">
@@ -338,7 +339,7 @@
 </section>
 <section id="skills" class="skills">
     <div class="container">
-        <h1 class="main-heading">umiejętności</h1>
+        <h1 class="main-heading">Umiejętności</h1>
         <div class="skills__items">
             <div class="skills__item">
                 <div class="skills__logo-container">
@@ -365,7 +366,7 @@
                     <img src="img/logos/js.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">JAVASCRIPT</p>
-                <p class="skills__text">Oprogramowanie zachowania witryny</p>
+                <p class="skills__text">Umięjętnośc programowania obiektoweo oraz korzystania z DOM API w celu dynamicznej modyfikacji elementów html</p>
             </div>
 
             <div class="skills__item">
@@ -373,7 +374,7 @@
                     <img src="img/logos/rwd-logo.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">RWD</p>
-                <p class="skills__text">Strony dobrze wyglądające na każdym urządzeniu</p>
+                <p class="skills__text">Umięjtność kodowania responywnych witryn zarów przy pomocy Bootstrap grid jak i samych media queries</p>
             </div>
 
             <div class="skills__item">
@@ -390,7 +391,7 @@
                     <img src="img/logos/bootstrap.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">BOOTSTRAP</p>
-                <p class="skills__text">KWykorzystanie grida</p>
+                <p class="skills__text">KWykorzystanie grida na potrzeby responywnych stron www</p>
             </div>
 
             <div class="skills__item">
@@ -398,7 +399,7 @@
                     <img src="img/logos/ajax.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">AJAX</p>
-                <p class="skills__text">Asynchroniczne wczytywanie teśći</p>
+                <p class="skills__text">Umięjtność asonchroniczneo wczytowania treśći korzystając z jQuery i Ajax</p>
             </div>
 
 
@@ -408,7 +409,7 @@
                 </div>
 
                 <p class="skills__title">JQUERY</p>
-                <p class="skills__text">Proste manipulowanie drzewem DOM</p>
+                <p class="skills__text">Szybkie maniulowanie elementami dom, dynamiczne doczytywanie elementów, proste animacje</p>
             </div>
 
             <div class="skills__item">
@@ -417,9 +418,8 @@
                 </div>
 
                 <p class="skills__title">PHOTOSHOP</p>
-                <p class="skills__text">Cięcie szablonu</p>
+                <p class="skills__text">Cięcie elementów szablonu psd do plików png,jpg</p>
             </div>
-
 
 
             <div class="skills__item">
@@ -428,7 +428,7 @@
                 </div>
 
                 <p class="skills__title">GIT</p>
-                <p class="skills__text">Kontrola wersji</p>
+                <p class="skills__text">Podstawy obsługi git, comitowanie, gałeźie</p>
             </div>
 
             <div class="skills__item">
@@ -436,7 +436,7 @@
                     <img src="img/logos/gulp.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">GULP</p>
-                <p class="skills__text">Ulatwienie pracy przy kompilacji minifikacji i laczeniu plikow</p>
+                <p class="skills__text">Proste konfiuracje Gulpa pozwalające na kompilacji plików Sass do Css, minifikacje i konkatenacje plików</p>
             </div>
 
             <div class="skills__item">
@@ -444,7 +444,7 @@
                     <img src="img/logos/php-mysql.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">PHP i MYSQl</p>
-                <p class="skills__text">Proste kodowanie</p>
+                <p class="skills__text">Podstawy programowania obiektowego, podstawowe komendy sql</p>
             </div>
 
 
@@ -454,7 +454,7 @@
                 </div>
 
                 <p class="skills__title">ZEND FRAMEWORK 1</p>
-                <p class="skills__text">kodowanie cms</p>
+                <p class="skills__text">Programie systemu cms</p>
             </div>
         </div>
 
@@ -469,53 +469,59 @@
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Voltor</p>
+                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem kodowanie szablonu psd. Przy prjekcie użyłem Html 5 , Css 3, Javascript</p>
                 </div>
                 <img src="img/works/voltor.jpg" class="works__image" alt="">
             </a>
             <a href="http://optopol.com" target="_blank" class="works__item works__item--no-margin">
-                  <div class=apla-hover>
+                <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Optopol</p>
+                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem kodowanie strony firmowej Optopol. Prz projekcie wykorzystałem  Html 5 , Css 3, Javascript , Bower, Npm , Gulp , Scrollmagic, GSQP</p>
                 </div>
                 <img src="img/works/optopol.jpg" class="works__image" alt="">
             </a>
             <a href="http://beta.fqs.pl" target="_blank" class="works__item">
-                  <div class=apla-hover>
+                <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">FQS POLAND</p>
+                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem kodowanie strony firmowej FQS POLAND S.A.. Prz projekcie wykorzystałem  Html 5 , Css 3, Javascript , Bower, Npm , Gulp , AOS </p>
+
                 </div>
                 <img src="img/works/fujitsu.jpg" class="works__image" alt="">
             </a>
             <a href="#" class="works__item works__item--no-margin">
-                  <div class=apla-hover>
+                <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Inwave</p>
+                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem oświęzenie ich firmowej strony. Przy tym projekcie zajmowałe się kodowanie zarówno strony wizualnej przy pomocy  Html 5 , Css 3, Javascript , Bower, Npm , Gulp , AOS, jak i podpięcie ic autorskieo systemu cms</p>
                 </div>
                 <img src="img/works/inwave.jpg" class="works__image" alt="">
             </a>
             <a href="http://nowa.instytutsalamandra.pl" target="_blank" class="works__item">
-                  <div class=apla-hover>
+                <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Instytut Salamandra</p>
+                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem  kompleks prac przy stronie Instytutu Salamandra. W projekcie uzywałem Html 5 , Css 3, Javascript , Bower, Npm , Gulp , AOS</p>
+
                 </div>
                 <img src="img/works/salamandra.jpg" class="works__image" alt="">
             </a>
             <a href="http://stodola.dev.inwave.pl" target="_blank" class="works__item works__item--no-margin">
-                  <div class=apla-hover>
+                <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Nowoczesna Stodoła</p>
+                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem wykonałem moje najnowsze zlecenie zakodowanie forntu dla firmy Nowoczesna Stodoła. W projekcie uzywałem Html 5 , Css 3, Javascript , Bower, Npm , Gulp , Scrollmagic, GSAP</p>
                 </div>
                 <img src="img/works/stodola.jpg" class="works__image" alt="">
             </a>
-
-
-
 
 
         </div>
     </div>
 </section>
 <section class="quote">
+    <h1 class="visuallyhidden">Cytat</h1>
     <div class="container">
         <blockquote class="quote__block">
             <span class="quote__text">Without requirements or design, programming is the art of adding bugs to an empty text file
@@ -526,7 +532,7 @@
 </section>
 <section id="contact" class="contact">
     <div class="container">
-        <h1 class="main-heading">kontakt</h1>
+        <h1 class="main-heading">Kontakt</h1>
         <div class="contact__address-data data">
 
             <a href="tel:793851807" class="data__item data__item--first">
@@ -552,20 +558,24 @@
                 <div class="data__text">
                     <p class="data__heading">E-mail</p>
                     <div class="data__content">
-                       chyla1988@gmail.com
+                        chyla1988@gmail.com
                     </div>
                 </div>
             </a>
         </div>
 
-        <form action="https://formspree.io/your@email.com" class="form" method="POST">
+        <form action="https://formspree.io/chyla1988@gmail.com" class="form" method="POST">
             <div class="form__group">
-                <input type="text" name="name" class="form__input form__input--float form__input--float--first " placeholder="Imię i nazwisko">
+                <input type="text" name="name" class="form__input form__input--float form__input--float--first "
+                       placeholder="Imię i nazwisko">
                 <input type="text" name="email" class="form__input form__input--float" placeholder="Adres e-mail">
             </div>
 
-            <textarea name="text" rows="4" class="form__input form__input--textarea" placeholder="Tekst wiadomości"></textarea>
-            <button type="submit" class="form__submit"><span class="form__submit-icon fa fa-paper-plane" aria-hidden="true"></span> Wyślij</button>
+            <textarea name="text" rows="4" class="form__input form__input--textarea"
+                      placeholder="Tekst wiadomości"></textarea>
+            <button type="submit" class="form__submit"><span class="form__submit-icon fa fa-paper-plane"
+                                                             aria-hidden="true"></span> Wyślij
+            </button>
         </form>
 
     </div>
