--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 </section>
 <section class="milestones">
     <div class="container">
-        <h1 class="main-subheading milestones__heading">Osiągnięcia</h1>
+        <h1 class="main-subheading milestones__heading visuallyhidden">Osiągnięcia</h1>
         <div class="milestones__items">
             <div class="milestones__item">
                 <div class="milestones__icon-container">
