--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <p class="about-me__signature">Paweł Chyła</p>
 
                 <div class="about-me__btn-outer">
-                    <a href="cv.pdf" download="test.txt" class="btn"><span class="btn__icon fa fa-download"></span>
+                    <a href="cv.pdf" download="cv.pdf" class="btn"><span class="btn__icon fa fa-download"></span>
                         Pobierz CV</a>
                 </div>
             </div>
