Add new url to project realizations

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <h1 class="main-heading resume__heading">Realizacje</h1>
 
         <div class="works__items clearfix">
-            <a href="http://voltor.dev.inwave.pl" target="_blank" class="works__item">
+            <a href="#" target="_blank" class="works__item">
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Voltor</p>
@@ -490,7 +490,7 @@
                 </div>
                 <img src="img/works/fujitsu.jpg" class="works__image" alt="">
             </a>
-            <a href="#" class="works__item works__item--no-margin">
+            <a href="http://inwave.pl" class="works__item works__item--no-margin">
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Inwave</p>
@@ -498,7 +498,7 @@
                 </div>
                 <img src="img/works/inwave.jpg" class="works__image" alt="">
             </a>
-            <a href="http://nowa.instytutsalamandra.pl" target="_blank" class="works__item">
+            <a href="http://instytutsalamandra.pl" target="_blank" class="works__item">
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Instytut Salamandra</p>
@@ -507,7 +507,7 @@
                 </div>
                 <img src="img/works/salamandra.jpg" class="works__image" alt="">
             </a>
-            <a href="http://stodola.dev.inwave.pl" target="_blank" class="works__item works__item--no-margin">
+            <a href="http://nowoczesnastodola.pl" target="_blank" class="works__item works__item--no-margin">
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Nowoczesna Stodoła</p>
