Fix small issue

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 <div class="about-me__detail-info">
                     <div class="about-me__info-item clearfix">
                         <p class="about-me__info-heading">Data urodzenia</p>
-                        <p class="about-me__info-text">: 12.05.2016</p>
+                        <p class="about-me__info-text">: 12.05.1988</p>
                     </div>
                     <div class="about-me__info-item clearfix">
                         <p class="about-me__info-heading">Telefon</p>
-                        <p class="about-me__info-text">: +61 9870 4563</p>
+                        <p class="about-me__info-text">: 793851807</p>
                     </div>
                     <div class="about-me__info-item clearfix">
                         <p class="about-me__info-heading">E-mail</p>
@@ -175,27 +175,7 @@
 
                         </div>
                     </div>
-                    <div class="about-me__hobby-item-outer">
-                        <div class="about-me__hobby-item">
-                            <span class="about-me__hobby-icon fa fa-money"></span>
-                            <span class="about-me__hobby-title">Pieniądze</span>
 
-                        </div>
-                    </div>
-                    <div class="about-me__hobby-item-outer">
-                        <div class="about-me__hobby-item">
-                            <span class="about-me__hobby-icon fa fa-video-camera"></span>
-                            <span class="about-me__hobby-title">Film</span>
-
-                        </div>
-                    </div>
-                    <div class="about-me__hobby-item-outer">
-                        <div class="about-me__hobby-item">
-                            <span class="about-me__hobby-icon fa fa-cutlery"></span>
-                            <span class="about-me__hobby-title">Gotowanie</span>
-
-                        </div>
-                    </div>
 
 
                 </div>
@@ -366,7 +346,7 @@
                     <img src="img/logos/js.png" class="skills__logo" alt="">
                 </div>
                 <p class="skills__title">JAVASCRIPT</p>
-                <p class="skills__text">Umięjętnośc programowania obiektoweo oraz korzystania z DOM API w celu dynamicznej modyfikacji elementów html</p>
+                <p class="skills__text">Korzystanie z standardu  EcmaScript 5 na codzień, aktualnie ucze się też ES6</p>
             </div>
 
             <div class="skills__item">
