Change texts, add new prject to realizations section, remove section quote, skills, milestone

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="container">
         <h1 class="page-header__heading">Paweł Chyła</h1>
-        <p class="page-header__subheading">front-end developer / webdeveloper</p>
+        <p class="page-header__subheading">front-end developer</p>
         <ul class="page-header__social-list">
 
             <li class="page-header__social-item">
@@ -39,7 +39,6 @@
                     </span>
                 </a>
             </li>
-
             <li class="page-header__social-item">
                 <a href="https://twitter.com/PaweChya88" target="_blank" class="page-header__social-link">
                     <span class="page-header__social-icon fa fa-twitter" aria-hidden="true">
@@ -47,8 +46,6 @@
                     </span>
                 </a>
             </li>
-
-
             <li class="page-header__social-item">
                 <a href="https://github.com/poulch" target="_blank" class="page-header__social-link">
                     <span class="page-header__social-icon fa fa-github" aria-hidden="true">
@@ -56,7 +53,6 @@
                     </span>
                 </a>
             </li>
-
             <li class="page-header__social-item page-header__social-item--last">
                 <a href="http://www.linkedin.com/in/paweł-chyła-3925baa3" target="_blank"
                    class="page-header__social-link">
@@ -65,7 +61,6 @@
                     </span>
                 </a>
             </li>
-
 
         </ul>
     </div>
@@ -82,44 +77,41 @@
 
 
                 <li class="page-nav__list-item">
-                    <a href="#about" class="page-nav__link">O mnie</a>
+                    <a href="#about" data-id='about' class="page-nav__link">O mnie</a>
                 </li>
 
                 <li class="page-nav__list-item">
-                    <a href="#cv" class="page-nav__link">CV</a>
+                    <a href="#cv" data-id='cv' class="page-nav__link">CV</a>
                 </li>
 
-                <li class="page-nav__list-item">
-                    <a href="#skills" class="page-nav__link">Umiejętności</a>
-                </li>
 
                 <li class="page-nav__list-item">
-                    <a href="#works" class="page-nav__link">Realizacje</a>
+                    <a href="#works" data-id='works' class="page-nav__link">Realizacje</a>
                 </li>
 
                 <li class="page-nav__list-item page-nav__list-item--last">
-                    <a href="#contact" class="page-nav__link">Kontakt</a>
+                    <a href="#contact" data-id='contact' class="page-nav__link">Kontakt</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<section id="about" class="about-me">
+<section id="about" class="about-me section">
     <div class="container">
         <h1 class="main-heading">O mnie</h1>
 
         <div class="about-me__text">
             <p class="about-me__text-lead">
-                Od okołu roku zajmuję się kodowanie stron www komercyjnie. Przez pierwszę sześć mięsięcy jako stażysta,
-                a od pół roku junior webdeveloper. Podczas dotychczasowej kariery od zera ucyzłem się zarówno
-                technologii
-                frontendowych jak i backendowych. Po odbycoiu stażu postanowiłem skupić się jedynie na technologiach
-                frontendowych, które cały czas rozwijam
+                Witam, mam na imię Paweł i jestem front-end developerem. Swoją przygodę zawodową rozpocząłem stażem
+                zawodowym, który pozwolił mi zapoznać się z takimi technologiami jak Html5, Css3, Javascript, Php. Po
+                zakończeniu stażu postanowiłem ukierunkuwać się na front-end i dalej rozwijać się w tym
+                kierunku. Aktualnie cały czas szlifuje Javascript(ES6,) żeby móc w niedługim czasie zacząć poznawać
+                frameworki javascipt z  dobrze ugruntowaną wiedzą samego javascipt.
             </p>
             <p>
-                Jestem osobą ambitną, dążącą do celu. Uwielbiam uczyć się nowych rzeczy i chciałbym stale doskonalić
-                swoje umiejętności w zespole bardziej doświadczonych ludzi. Lubie poznawać nowych ludzi a praca
-                zespołowa sprawa mi przyjemnąść. Jestem osobą kontaktową i bezkonfiktową.
+                Jeśli chodzi o mnie jestem  osobą ambitną, cierpliwą, wytrwale  dążącą do celu. Uwielbiam uczyć się nowych rzeczy i chciałbym stale doskonalić
+                swoje umiejętności w zespole bardziej doświadczonych proramistów. Lubie poznawać nowych ludzi a praca
+                zespołowa sprawa mi przyjemność. Jestem osobą kontaktową i bezkonfliktową.
             </p>
         </div>
 
@@ -134,7 +126,7 @@
                     </div>
                     <div class="about-me__info-item clearfix">
                         <p class="about-me__info-heading">Telefon</p>
-                        <p class="about-me__info-text">: 793851807</p>
+                        <p class="about-me__info-text">: 574 139 522</p>
                     </div>
                     <div class="about-me__info-item clearfix">
                         <p class="about-me__info-heading">E-mail</p>
@@ -175,60 +167,12 @@
 
                         </div>
                     </div>
-
-
-
                 </div>
-
-
             </div>
-
-        </div>
-
-    </div>
-</section>
-<section class="milestones">
-    <div class="container">
-        <h1 class="main-subheading milestones__heading visuallyhidden">Osiągnięcia</h1>
-        <div class="milestones__items">
-            <div class="milestones__item">
-                <div class="milestones__icon-container">
-                    <span class="milestones__icon fa fa-coffee"></span>
-                </div>
-                <p class="milestones__counter">2412</p>
-                <p class="milestones__title">Kubków kawy</p>
-            </div>
-
-            <div class="milestones__item">
-                <div class="milestones__icon-container">
-                    <span class="milestones__icon fa fa-briefcase"></span>
-                </div>
-                <p class="milestones__counter">7</p>
-                <p class="milestones__title">Projektów</p>
-            </div>
-
-            <div class="milestones__item">
-                <div class="milestones__icon-container">
-                    <span class="milestones__icon fa fa-code"></span>
-                </div>
-                <p class="milestones__counter">35621</p>
-                <p class="milestones__title">Lini kodu</p>
-            </div>
-
-
-            <div class="milestones__item milestones__item--last">
-                <div class="milestones__icon-container">
-                    <span class="milestones__icon fa fa-clock-o"></span>
-                </div>
-                <p class="milestones__counter">2016</p>
-                <p class="milestones__title">Godzin w pracy</p>
-            </div>
-
-
         </div>
     </div>
 </section>
-<section id="cv" class="resume">
+<section id="cv" class="resume section">
     <div class="container">
         <h1 class="main-heading resume__heading">Curriculum Vitae</h1>
 
@@ -317,147 +261,16 @@
 
     </div>
 </section>
-<section id="skills" class="skills">
+<section id="works" class="works section">
     <div class="container">
-        <h1 class="main-heading">Umiejętności</h1>
-        <div class="skills__items">
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/html.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">HTML 5</p>
-                <p class="skills__text">Umiejętnośc kodowania semantycznej struktury dokumentu Html zgodnie z wytycznimi
-                    W3C</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/css.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">CSS 3</p>
-                <p class="skills__text">Kodowanie świetnie wyglądających witryn korzytając między innymi z flexboxa</p>
-            </div>
-
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/js.png" class="skills__logo" alt="">
-                </div>
-                <p class="skills__title">JAVASCRIPT</p>
-                <p class="skills__text">Korzystanie z standardu  EcmaScript 5 na codzień, aktualnie ucze się też ES6</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/rwd-logo.png" class="skills__logo" alt="">
-                </div>
-                <p class="skills__title">RWD</p>
-                <p class="skills__text">Umięjtność kodowania responywnych witryn zarów przy pomocy Bootstrap grid jak i samych media queries</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/sass.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">SASS</p>
-                <p class="skills__text">Szybkie kodowanie wartwy wizualnej strony www</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/bootstrap.png" class="skills__logo" alt="">
-                </div>
-                <p class="skills__title">BOOTSTRAP</p>
-                <p class="skills__text">KWykorzystanie grida na potrzeby responywnych stron www</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/ajax.png" class="skills__logo" alt="">
-                </div>
-                <p class="skills__title">AJAX</p>
-                <p class="skills__text">Umięjtność asonchroniczneo wczytowania treśći korzystając z jQuery i Ajax</p>
-            </div>
-
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/jquery.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">JQUERY</p>
-                <p class="skills__text">Szybkie maniulowanie elementami dom, dynamiczne doczytywanie elementów, proste animacje</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/ps.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">PHOTOSHOP</p>
-                <p class="skills__text">Cięcie elementów szablonu psd do plików png,jpg</p>
-            </div>
-
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/git.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">GIT</p>
-                <p class="skills__text">Podstawy obsługi git, comitowanie, gałeźie</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/gulp.png" class="skills__logo" alt="">
-                </div>
-                <p class="skills__title">GULP</p>
-                <p class="skills__text">Proste konfiuracje Gulpa pozwalające na kompilacji plików Sass do Css, minifikacje i konkatenacje plików</p>
-            </div>
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/php-mysql.png" class="skills__logo" alt="">
-                </div>
-                <p class="skills__title">PHP i MYSQl</p>
-                <p class="skills__text">Podstawy programowania obiektowego, podstawowe komendy sql</p>
-            </div>
-
-
-            <div class="skills__item">
-                <div class="skills__logo-container">
-                    <img src="img/logos/zf.png" class="skills__logo" alt="">
-                </div>
-
-                <p class="skills__title">ZEND FRAMEWORK 1</p>
-                <p class="skills__text">Programie systemu cms</p>
-            </div>
-        </div>
-
-    </div>
-</section>
-<section id="works" class="works">
-    <div class="container">
-        <h1 class="main-heading resume__heading">Realizacje</h1>
+        <h1 class="main-heading">Realizacje</h1>
 
         <div class="works__items clearfix">
-            <a href="#" target="_blank" class="works__item">
-                <div class=apla-hover>
-                    <img src="img/plus.png" alt="" class="apla-hover__icone">
-                    <p class="apla-hover__project-name">Voltor</p>
-                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem kodowanie szablonu psd. Przy prjekcie użyłem Html 5 , Css 3, Javascript</p>
-                </div>
-                <img src="img/works/voltor.jpg" class="works__image" alt="">
-            </a>
-            <a href="http://optopol.com" target="_blank" class="works__item works__item--no-margin">
+
+            <a href="http://optopol.com.pl/" target="_blank" class="works__item works__item--no-margin">
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Optopol</p>
-                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem kodowanie strony firmowej Optopol. Prz projekcie wykorzystałem  Html 5 , Css 3, Javascript , Bower, Npm , Gulp , Scrollmagic, GSQP</p>
                 </div>
                 <img src="img/works/optopol.jpg" class="works__image" alt="">
             </a>
@@ -465,7 +278,6 @@
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">FQS POLAND</p>
-                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem kodowanie strony firmowej FQS POLAND S.A.. Prz projekcie wykorzystałem  Html 5 , Css 3, Javascript , Bower, Npm , Gulp , AOS </p>
 
                 </div>
                 <img src="img/works/fujitsu.jpg" class="works__image" alt="">
@@ -474,7 +286,6 @@
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Inwave</p>
-                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem oświęzenie ich firmowej strony. Przy tym projekcie zajmowałe się kodowanie zarówno strony wizualnej przy pomocy  Html 5 , Css 3, Javascript , Bower, Npm , Gulp , AOS, jak i podpięcie ic autorskieo systemu cms</p>
                 </div>
                 <img src="img/works/inwave.jpg" class="works__image" alt="">
             </a>
@@ -482,8 +293,6 @@
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Instytut Salamandra</p>
-                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem  kompleks prac przy stronie Instytutu Salamandra. W projekcie uzywałem Html 5 , Css 3, Javascript , Bower, Npm , Gulp , AOS</p>
-
                 </div>
                 <img src="img/works/salamandra.jpg" class="works__image" alt="">
             </a>
@@ -491,28 +300,24 @@
                 <div class=apla-hover>
                     <img src="img/plus.png" alt="" class="apla-hover__icone">
                     <p class="apla-hover__project-name">Nowoczesna Stodoła</p>
-                    <p class="apla-hover__project-name apla-hover__project-name--text">Na zlecenie firmy  Inwave Interactive wykonałem wykonałem moje najnowsze zlecenie zakodowanie forntu dla firmy Nowoczesna Stodoła. W projekcie uzywałem Html 5 , Css 3, Javascript , Bower, Npm , Gulp , Scrollmagic, GSAP</p>
                 </div>
                 <img src="img/works/stodola.jpg" class="works__image" alt="">
+            </a>
+            <a href="http://onwelo.com" target="_blank" class="works__item works__item--onwelo works__item--no-margin">
+                <div class=apla-hover>
+                    <img src="img/plus.png" alt="" class="apla-hover__icone">
+                    <p class="apla-hover__project-name">Onwelo</p>
+                </div>
+
             </a>
 
 
         </div>
     </div>
 </section>
-<section class="quote">
-    <h1 class="visuallyhidden">Cytat</h1>
+<section id="contact" class="contact section">
     <div class="container">
-        <blockquote class="quote__block">
-            <span class="quote__text">Without requirements or design, programming is the art of adding bugs to an empty text file
-</span>
-            <cite class="quote__author">Louis Srygley</cite>
-        </blockquote>
-    </div>
-</section>
-<section id="contact" class="contact">
-    <div class="container">
-        <h1 class="main-heading">Kontakt</h1>
+        <h1 class="main-heading resume__heading">Kontakt</h1>
         <div class="contact__address-data data">
 
             <a href="tel:574139522" class="data__item data__item--first">
@@ -560,8 +365,6 @@
 
     </div>
 </section>
-
-
 <footer class="page-footer">
     <div class="container">
         <a href="javascript:" class="page-footer__up-btn">
